# trade0

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  backtest_grid_strategy.py  backtest_with_real_data.py  download_binance_data.py  download_historical_data.py  download_multi_source_data.py  prepare_data.py  pyproject.toml  requirements.txt  setup_project.sh  simple_grid_backtest.py
config/strategies/: grid_btcusdt.yaml
nautilus_data/: BTCUSDT_quotes.csv  BTCUSDT_quotes.parquet  EURUSD_quotes.parquet
nautilus_data/historical/: BTCUSDT_ohlc.csv  BTCUSDT_quotes.csv  BTCUSDT_quotes.parquet
scripts/: download_data.py  reorganize_project.sh  run_backtest.py  run_live.py
src/backtest/: backtest_with_real_data.py  simple_grid_backtest.py
src/data/: download_multi_source_data.py
src/live/: run_grid_strategy.py
src/strategies/: grid.py  simple_grid.py
